k8s/microservices/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
    - port: 80
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: ghcr.io/efrei-lsi-2025/metroboulotdodo-front:k8s
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: front
  labels:
    app: front
spec:
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: front
          port: 80
