k8s/microservices/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  ports:
    - port: 3000
  selector:
    app: proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: ghcr.io/efrei-lsi-2025/metroboulotdodo-back:k8s
          ports:
            - containerPort: 3000
          command: ["npm"]
          args: ["run", "start:proxy"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: proxy
          port: 3000
